--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/ui": "^3.4",
         "maatwebsite/excel": "^3.1",
         "mcamara/laravel-localization": "^1.7",
+        "spatie/laravel-permission": "^5.10",
         "staudenmeir/belongs-to-through": "^2.5",
         "staudenmeir/eloquent-has-many-deep": "^1.17"
     },
