--- a/composer.json
+++ b/composer.json
@@ -7,13 +7,14 @@
     "require": {
         "php": "^8.0.2",
         "astrotomic/laravel-translatable": "^11.11",
+        "doctrine/dbal": "^3.7",
         "guzzlehttp/guzzle": "^7.2",
-        "laravel/framework": "^9.11",
+        "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.7",
         "laravel/ui": "^3.4",
         "maatwebsite/excel": "^3.1",
-        "mcamara/laravel-localization": "^1.7",
+        "mcamara/laravel-localization": "^1.8",
         "mpdf/mpdf": "v8.1.6",
         "spatie/laravel-permission": "^5.10",
         "staudenmeir/belongs-to-through": "^2.5",
@@ -68,6 +69,6 @@
         "preferred-install": "dist",
         "sort-packages": true
     },
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "prefer-stable": true
 }
