--- a/.env_bak
+++ b/.env_bak
@@ -1,15 +1,19 @@
 APP_NAME=訂單系統
 APP_ENV=local
-APP_KEY=base64:p0F14KGnHTc/0Igac2xshkboiRVcjo/pi5JUtHZ+O4c=
+APP_KEY=base64:123
 APP_DEBUG=true
-APP_URL=http://ods.dtstw.com/
+APP_URL=http://localhost/
 
-OCADMIN_FOLDER=''
-OCADMIN_URL=http://ods.dtstw.com/backend/
+ADMIN_FOLDER=''
+ADMIN_URL=http://localhost/backend/
 
-SESSION_LIFETIME=120
+APP_TIMEZONE=Asia/Taipei
 
+APP_LOCALE=zh_Hant
 TRANSLATION_DRIVER=file
+
+SESSION_DRIVER=file
+SESSION_LIFETIME=96400
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -18,7 +22,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=chinabing_std
+DB_DATABASE=chinabing_dev
 DB_USERNAME=root
 DB_PASSWORD=123456
 
@@ -26,8 +30,6 @@ BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DISK=local
 QUEUE_CONNECTION=sync
-SESSION_DRIVER=file
-SESSION_LIFETIME=120
 
 MEMCACHED_HOST=127.0.0.1
 
