資料庫備份寫入 app\Console\Commands

--- a/.env_bak
+++ b/.env_bak
@@ -1,19 +1,19 @@
 APP_NAME=訂單系統
-APP_ENV=local
-APP_KEY=base64:123
+APP_ENV=elon
+APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost/
-
-ADMIN_FOLDER=''
-ADMIN_URL=http://localhost/backend/
-
+APP_FQDN="ods.dtstw.test"
+APP_URL=http://ods.dtstw.test/
 APP_TIMEZONE=Asia/Taipei
+
+#必要。用於判斷網址所在區域，會影響登入轉址判斷。
+ADMIN_FOLDER='backend'
+ADMIN_URL=http://ods.dtstw.test/backend/
+
+SESSION_LIFETIME=120
 
 APP_LOCALE=zh_Hant
 TRANSLATION_DRIVER=file
-
-SESSION_DRIVER=file
-SESSION_LIFETIME=96400
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -22,14 +22,29 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=chinabing_dev
+DB_DATABASE=chbods_std
 DB_USERNAME=root
-DB_PASSWORD=123456
+DB_PASSWORD=xURBbxPh7uDzrcUD
+#DB_PASSWORD=de5ffBTUXHh4eV2p
+
+DB_SYSDATA_CONNECTION=sysdata
+DB_SYSDATA_HOST=127.0.0.1
+DB_SYSDATA_PORT=3306
+DB_SYSDATA_DATABASE=chbods_sysdata
+DB_SYSDATA_USERNAME=root
+DB_SYSDATA_PASSWORD=xURBbxPh7uDzrcUD
+
+#備份資料庫
+DB_MYSQL_BIN_PATH='C:/Program Files/MariaDB 11.6/bin/'
+DB_BACKUP_DIR='C:/Servers/dbbackup/'
+ZIPEXE='C:/Program Files/7-Zip/7z.exe'
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DISK=local
 QUEUE_CONNECTION=sync
+SESSION_DRIVER=file
+SESSION_LIFETIME=120
 
 MEMCACHED_HOST=127.0.0.1
 
@@ -46,6 +61,24 @@ MAIL_ENCRYPTION=null
 MAIL_FROM_ADDRESS="hello@example.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
+# Keys and tokens
+# 網址加上 access-key 可以略過 ip 檢查。
+ADMIN_ACCESS_KEY=""
+ADMIN_API_KEY=""
+API_ACCESS_KEY=""
+API_API_KEY=""
+POS_ACCESS_KEY=""
+POS_API_KEY=""
+WWW_ACCESS_KEY=""
+WWW_API_KEY=""
+
+
+#暫時沒用
+APIV2_ACCESS_KEY=""
+
+#JWT
+JWT_SECRET=
+
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_DEFAULT_REGION=us-east-1
@@ -59,3 +92,9 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+
+#跨站模式 (測試區)
+CORS_ALLOWED_ORIGINS_PATTERNS=/^https?:\/\/ods\.dtstw\.test$/,/^https?:\/\/dods\.dtstw\.com$/,/^https?:\/\/localhost:60501$/,/^https?:\/\/localhost:60502$/,/^https?:\/\/localhost:60503$/
+#跨站模式 (正式區)
+#CORS_ALLOWED_ORIGINS_PATTERNS=/^https?:\/\/ods\.dtstw\.com$/,/^https?:\/\/www\.chinabing\.net$/,/^https?:\/\/hrc\.dtstw\.com$/,
